--- a/responsive.css
+++ b/responsive.css
@@ -2,20 +2,28 @@
 
    nav ul {
         position:absolute;
-        top: 80px;
-        left: 9%;
-        right: 0;
+        top: 100px;
+        left:0%;
+        right:0;
         flex-direction: column;
-        background-color: black;
+         background-color:  #0d233a; 
         text-align: center;
         gap: 0;
         overflow: hidden;
+        width: 100%;
+         z-index: 999; 
+        /* padding: 20px 0px;  */
 
 
     }
 
-    nav li{
+    nav ul li{
         /* padding: 10px; */
+        margin-bottom: 15px;
+        
+       
+    }
+    .btn{
         margin-bottom: 15px;
     }
 
@@ -46,6 +54,10 @@
     .buttons-grid{
          /* grid-template-columns:1fr; */
          grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+
+
+         
          padding: 10px 30px;
               
     }
@@ -81,6 +93,11 @@
         margin: 0 7em;
     }
 
+    .service-text{
+        max-width: 70%;
+       
+    }
+
     .service-text h1{
         font-size: 40px;
         line-height: 1.3;
@@ -111,9 +128,11 @@
     .technology h1{
         /* flex-wrap: wrap; */
         font-size: 40px;
+        line-height: 1.3;
     }
 
-    .review-grid{
+    .review-grid,
+    .review-img{
         flex-wrap: wrap;
     }
     .review-head h1{
@@ -147,156 +166,51 @@
 
    .copyright{
     gap: 1px;
+    text-align: center;
+    margin: 0 auto;
    }
-}   
+}  
 
-/* @media (max-width:874px){
-    .hero-text h1,
-    #in{
-        font-size: 40px;
-        line-height: 1.5;
-        margin: auto;
-    }
-    .hero-text p{
-        font-size:20px;
-        line-height: 1.3;
-    }
-}
-@media(max-width:600px){
-    
-    .btn{
-        margin-bottom: 20px;
-        width: 100%;
+
+@media (min-width: 600px) and (max-width: 950px){
+     .buttons-grid{
+        padding: 50px 0px;
+        margin: 0 auto;
        
+     }
+    .heading h1
+    {
+        font-size:49px;
+    }
+    .content h1{
+        font-size: 52px;
+    }
+
+    .service-text{
+        max-width: 70%;
         
     }
-
-    .buttons-grid{
-         grid-template-columns:1fr;
-              
-    }
-
-
-    .service{
-       margin-left: 2rem;
-    }
-} 
-
-
-
-
-@media (max-width:666px){
-    .content h1{
-        font-size: 40px;
-        line-height: 1.5;
-    }
-
-    .left{
-         grid-template-columns:1fr;
-         text-align: center;
-    }
-    .about-text h1, p{
-        text-align: center;
-    }
-
-    
-}
-
-
-
-@media (max-width:760px){
-    .heading h1{
-        font-size: 50px;
-        line-height: 1.3;
-       
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width:1050px){
-    .about-text h1{
-        font-size: 30px;
-        line-height: 1.5;
-    }
-    .about-text p{
-        font-size: 14px;
-    }
-    .about-img img{
-        max-width: 500px;
-
-    }
-
     .service-text h1{
-        font-size: 50   px;
-        line-height: 1.3;
-        text-align: center;
+        max-width: 60%;
+        font-size: 45px;
+        line-height: 1.2;
+        text-align: start;
     }
-
-    .service-text p{
-        font-size: 20px;
-       
-    }
-
-    .service-img img{
-        max-width: 600px;
-    }
-    
-
-   
-}
-
-
-  @media (max-width:1000px){
-     .about-shubpy{
+    .about-shubpy{
         flex-wrap: wrap;
-
-    }
-
-    .head-text h1, p{
-        text-align: center;
+        max-width: 60%;
     }
     .shubpy-grid{
-         grid-template-columns:1fr;
-         text-align: center;
-         justify-content: center;
+        grid-template-columns: 1fr;
     }
-} 
+    .review-grid{
+        flex-wrap: wrap;
+        max-width: 60%;
+        margin: 0 auto;
+    }
+    .review-img{
+        flex-wrap: wrap;
+    }
 
-@media (max-width:610px){
-    .right{
-        grid-template-columns:1fr;
-    }
 }
 
-
-@media (max) */
