--- a/css/responsive.css
+++ b/css/responsive.css
@@ -37,46 +37,64 @@
   }
   .logo img {
     width: 100px;
-    height: 25px;
+    height: 30px;
+    margin-left: 10px;
   }
   .hero-text h1,
   #in {
-    font-size: 20px;
+    font-size: 26px;
     line-height: 1.3;
     max-width: 100%;
     /* text-align: center; */
     margin: 0 auto;
   }
   .hero-text p {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1.5;
   }
   .buttons-grid {
     /* grid-template-columns:1fr; */
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
-    padding: 10px 30px;
+    padding: 30px 30px;
   }
 
   .heading h1 {
     font-size: 40px;
     line-height: 1.3;
   }
+
+  .about-img {
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto; /* center the image */
+  }
+
+  .about-img img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
   .about-text {
     padding: 0px 50px;
   }
 
   .about-text h1 {
-    font-size: 40px;
+    font-size: 25px;
     line-height: 1.2;
   }
   .about-text p {
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 1.8;
   }
   .content h1 {
-    font-size: 40px;
+    font-size: 30px;
     line-height: 1.2;
     text-align: center;
+  }
+  .feature-item {
+    font-size: 15px;
   }
 
   .left {
@@ -87,9 +105,24 @@
   .right {
     grid-template-columns: 1fr;
   }
+  .counter-card h3 {
+    font-size: 18px;
+  }
 
   .btn {
     margin: 0 7em;
+  }
+
+  .service-img {
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .service-img img {
+    width: 100%;
+    height: auto;
+    display: block;
   }
 
   .service-text {
@@ -97,12 +130,12 @@
   }
 
   .service-text h1 {
-    font-size: 40px;
+    font-size: 30px;
     line-height: 1.3;
   }
 
   .service-text p {
-    font-size: 16px;
+    font-size: 15px;
   }
   .service-text ul li {
     font-size: 13px;
@@ -110,30 +143,46 @@
   .about-shubpy {
     flex-wrap: wrap;
   }
+  .head-text {
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  .head-text h1,
+  p {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
   .head-text h1 {
-    font-size: 40px;
+    font-size: 25px;
     line-height: 1.3;
     text-align: center;
   }
   .head-text p {
     margin: 0px 30px;
+    font-size: 15px;
   }
   .shubpy-grid {
     grid-template-columns: 1fr;
   }
 
   .shubpy-card {
-    margin: 30px auto;
+    margin: 0 90px;
+  }
+
+  .shubpy-card p {
+    font-size: 15px;
   }
   .technology h1 {
     /* flex-wrap: wrap; */
-    font-size: 40px;
+    font-size: 30px;
     line-height: 1.3;
   }
 
   .review-grid {
     flex-wrap: wrap;
-    max-width: 50%;
+    max-width: 80%;
     height: auto;
     display: block;
   }
@@ -192,6 +241,13 @@
     text-align: center;
     margin: 0 auto;
   }
+
+  .solution-content h1 {
+    font-size: 35px;
+  }
+  .solution-content p {
+    font-size: 15px;
+  }
 }
 
 @media (min-width: 651px) and (max-width: 950px) {
@@ -208,6 +264,7 @@
   .heading h1 {
     font-size: 49px;
   }
+
   .content {
     margin: 0 auto;
     margin: 0px 60px;
