--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,30 +1,34 @@
-@media (max-width: 905px) {
+@media only screen and (max-width: 904px) {
+  ul li a:hover {
+    border-bottom: 2px solid #50a0ff;
+  }
+
+  #hire-d {
+    width: auto;
+    max-width: 60%;
+  }
   nav ul {
-    position: absolute;
-    top: 100px;
-    left: 0%;
-    right: 0;
+    display: none;
+  }
+  .menu-icon {
+    display: flex;
+    cursor: pointer;
+  }
+  .showData {
+    display: flex;
     flex-direction: column;
-    background-color: #0d233a;
-    text-align: center;
-    gap: 0;
-    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 90px;
+    background-color: #0d243c;
+
     width: 100%;
+    height: 340px;
+    text-align: center;
+    padding: 0px;
+    gap: 18px;
     z-index: 999;
-    /* padding: 20px 0px;  */
-  }
-
-  nav ul li {
-    /* padding: 10px; */
-    margin-bottom: 15px;
-  }
-  .btn {
-    margin-bottom: 15px;
-  }
-
-  .menu-icon i {
-    display: inline;
-    color: #fff;
   }
 }
 
@@ -41,9 +45,13 @@
     font-size: 12px;
     padding: 10px 12px;
   }
+
+  .solution-card:nth-child(3n + 2) {
+    transform: translateY(0) scaleY(1);
+  }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 651px) {
   nav {
     display: flex;
     align-items: center;
@@ -67,6 +75,7 @@
     font-size: 14px;
     line-height: 1.5;
   }
+
   .buttons-grid {
     /* grid-template-columns:1fr; */
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -102,6 +111,10 @@
   .about-text p {
     font-size: 14px;
     line-height: 1.8;
+  }
+
+  .trusted-partner {
+    gap: 18px;
   }
   .content h1 {
     font-size: 30px;
@@ -157,20 +170,28 @@
   }
   .about-shubpy {
     flex-wrap: wrap;
+    gap: 0px;
   }
   .head-text {
-    width: 90%;
-    max-width: 800px;
+    /* width: 100%;
+    max-width: 900px;
     margin: 0 auto;
+    display: inline-block; */
+    padding: 0 16px;
+    box-sizing: border-box;
   }
-  .head-text h1,
-  p {
-    width: 100%;
+  .head-text p {
+    /* width: 100%;
     height: auto;
-    display: block;
+    display: block; */
+
+    margin: 0; /* remove the big left/right margins */
+    max-width: 100%;
+    font-size: 14px; /* optional: adjust for small screen */
+    text-align: center;
   }
   .head-text h1 {
-    font-size: 25px;
+    font-size: 20px;
     line-height: 1.3;
     text-align: center;
   }
@@ -264,6 +285,16 @@
   .solution-content p {
     font-size: 15px;
   }
+  .solution-card h1 {
+    font-size: 20px;
+  }
+  .solution-card p {
+    font-size: 15px;
+  }
+
+  .solution-card:nth-child(3n + 2) {
+    transform: translateY(0) scaleY(1);
+  }
 }
 
 @media (min-width: 651px) and (max-width: 950px) {
@@ -276,6 +307,7 @@
     justify-content: space-between; /* Key: logo left, icon right */
     padding: 30px 40px;
   }
+
   .buttons-grid {
     padding: 50px 0px;
     margin: 0 auto;
@@ -382,6 +414,10 @@
   .shubpy-card {
     margin: 12px auto;
   }
+
+  .solution-card:nth-child(3n + 2) {
+    transform: translateY(0) scaleY(1);
+  }
 }
 
 @media (min-width: 951px) and (max-width: 1026px) {
@@ -451,33 +487,39 @@
 
   .trusted-partner {
     flex-wrap: nowrap;
+    gap: 10px;
   }
 
   .content {
     margin-left: 30px;
   }
   .content h1 {
-    font-size: 40px;
+    font-size: 30px;
     line-height: 1.3;
   }
   .feature-item {
-    font-size: 14px;
+    font-size: 12px;
+  }
+  .feature-item i {
+    font-size: 15px;
   }
 
   .right {
     margin-right: 50px;
   }
   .counter-card {
-    padding: 40px 30px;
+    height: 150px;
+    width: 200px;
+    /* gap: 10px; */
   }
+
   .counter-card h1 {
     font-size: 30px;
   }
   .counter-card h3 {
     font-size: 15px;
   }
-
-  .service-content {
+  */ .service-content {
     flex-wrap: nowrap;
   }
 
@@ -534,6 +576,9 @@
   }
   .contact-text p {
     text-align: center;
+  }
+  .solution-card:nth-child(3n + 2) {
+    transform: translateY(0) scaleY(1);
   }
 }
 
@@ -615,6 +660,7 @@
 
   .trusted-partner {
     flex-wrap: nowrap;
+    gap: 12px;
   }
 
   .content {
@@ -622,7 +668,7 @@
   }
 
   .content h1 {
-    font-size: 46px;
+    font-size: 30px;
     line-height: 1.4;
   }
 
@@ -639,17 +685,21 @@
     grid-template-columns: repeat(auto-fit, minmax(2, 1fr));
   }
   .counter-card {
-    /* padding: 40px 30px; */
-    /* min-height: 100px;
-    min-width: 240px; */
+    height: 150px;
+    width: 200px;
   }
 
   .counter-card h1 {
     font-size: 36px;
+    padding: 0px;
   }
 
   .counter-card h3 {
     font-size: 18px;
+  }
+
+  .feature-item i {
+    font-size: 12px;
   }
 
   .service-content {
@@ -718,14 +768,25 @@
     right: 10%;
     top: 0;
   }
+  .solution-card:nth-child(3n + 2) {
+    transform: translateY(0) scaleY(1);
+  }
 }
 
-@media (min-width: 1400px) {
-  /* .hero-text {
-    margin-left: 60px;
-  } */
+@media (min-width: 1400px) and (max-width: 1600px) {
+  ul {
+    margin-left: 50px;
+  }
+  .hero {
+    flex-wrap: nowrap;
+    gap: 0px;
+  }
+  .hero-text {
+    margin-left: 100px;
+    gap: 0px;
+  }
   .heading h1 {
-    font-size: 90px;
+    font-size: 150px;
   }
   .Contact {
     flex-wrap: nowrap;
@@ -738,5 +799,12 @@
   }
   .contact-text p {
     max-width: 500px;
+  }
+}
+
+@media (min-width: 1600px) {
+  .trusted-partner {
+    flex-wrap: nowrap;
+    gap: 20px;
   }
 }
