--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 html,
 body {
+  padding: 0;
+  margin: 0;
   width: 100%;
   height: 100%;
   background-color: #0b243e;
@@ -17,21 +19,27 @@ body {
 }
 
 .logo img {
-  margin: 0px 100px;
+  margin: 0px 0px;
   height: 47px;
   width: 175px;
   justify-content: center;
 }
 
 nav {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #0a233d;
+  z-index: 1000;
+}
+.nav-container {
+  width: 1350px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  padding: 30px;
-  width: 100%;
-
-  position: fixed;
-  background-color: #0a233d;
+  justify-content: space-between;
+  padding: 20px;
+  position: relative;
 }
 
 nav ul {
@@ -52,9 +60,14 @@ nav li {
   text-decoration: none;
 }
 
-.menu-icon i {
+ul li a:hover {
+  border-bottom: 2px solid #50a0ff;
+}
+
+.menu-icon {
   display: none;
   font-size: 25px;
+  color: #ffffff;
 }
 
 .btn {
@@ -82,6 +95,7 @@ nav li {
   max-width: 100%;
   flex-wrap: wrap;
   margin-bottom: 86px;
+  
 }
 
 .hero-text {
@@ -176,13 +190,20 @@ nav li {
 }
 .heading h1 {
   font-family: Arial, sans-serif;
+  /* font-family: "Poppins", sans-serif; */
   font-size: 150px;
   line-height: 100%;
   font-weight: 600;
   text-align: center;
   -webkit-text-stroke: 1px #ffff;
   background: transparent;
-  color: #0b243e;
+  /* color: #0b243e; */
+
+  /* stroke-width: 1px;
+  -webkit-text-stroke-color: #ffffff;
+  stroke: #ffffff; */
+  color: #ffffff00;
+  opacity: 0.3;
 }
 
 .about-section {
@@ -191,7 +212,7 @@ nav li {
   justify-content: center;
   gap: 79px;
   border: 1px solid #ffffff21;
-  max-width: 1320px;
+  max-width: 1270px;
   min-height: 547px;
   margin: 102px auto;
   border-radius: 30px;
@@ -243,6 +264,7 @@ nav li {
   align-items: stretch;
   color: #ffffff;
   flex-wrap: wrap;
+  max-width: 1270px;
 }
 
 .content h1 {
@@ -278,32 +300,37 @@ nav li {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
-  gap: 10px;
+  gap: 24px;
+  padding: 20px;
   /* min-width: 300px; */
+  max-width: 558px;
 }
 
 .counter-card {
-  background: transparent;
-  padding: 30px;
+  width: 280px;
+  height: 186px;
+  background: rgba(255, 255, 255, 0.05); /* subtle glass look */
+  border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 30px;
   text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  /* min-height: 100px;
-  min-width: 240px; */
-
-  border: 1px solid #ffffff21;
+  backdrop-filter: blur(10px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  flex-wrap: wrap;
 }
 
-.counter-card h1 {
-  font-size: 45px;
+.count {
+  font-size: 63px;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
+  line-height: 72px;
+  padding: 10px 47px;
 }
 
-.counter-card h3 {
-  font-weight: 400;
+.counter-card p {
+  font-weight: 300;
   font-family: "Poppins", sans-serif;
   font-size: 23px;
 }
@@ -312,8 +339,11 @@ nav li {
 .services-section {
   margin: 103px auto;
   border: 1px solid #ffffff21;
-  max-width: 1240px;
+  max-width: 1280px;
   border-radius: 30px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.05);
 }
 .service-btn {
   display: flex;
@@ -341,6 +371,11 @@ nav li {
 }
 
 .service-btn button:hover {
+  background-color: white;
+  color: #000000;
+}
+
+.active {
   background-color: white;
   color: #000000;
 }
@@ -402,8 +437,9 @@ nav li {
 .solution-provide {
   color: #ffffff;
   font-family: "Poppins", sans-serif;
-  max-width: 1240px;
+  max-width: 1320px;
   margin: 0 auto;
+  
 }
 
 .solution-content {
@@ -437,17 +473,23 @@ nav li {
 
 .solution-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 360px);
+  grid-template-columns: repeat(auto-fit, 400px);
+ 
   gap: 20px;
   margin: 3rem 0;
   font-family: "Poppins", sans-serif;
   justify-content: center;
+  
+  
+  
 }
 
 .solution-card {
   border: 1px solid #ffffff21;
   padding: 30px;
   border-radius: 30px;
+ 
+  
 }
 
 .solution-card h1 {
@@ -464,6 +506,10 @@ nav li {
   padding: 10px 0px;
 }
 
+.solution-card:nth-child(3n + 2) {
+  transform: translateY(-50px) scaleY(0.99); /* Up + slightly compressed vertically */
+}
+
 .about-shubpy {
   display: flex;
   align-items: center;
@@ -471,7 +517,7 @@ nav li {
   color: #ffffff;
   align-items: stretch;
   max-width: 1240px;
-  margin: 134px auto;
+  margin: 124px auto;
   gap: 40px;
 }
 
@@ -487,6 +533,7 @@ nav li {
   padding: 70px 15px;
   border-radius: 25px;
   box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.2);
+   background: rgba(255, 255, 255, 0.05); 
 }
 
 .quote-text h4 {
@@ -543,7 +590,8 @@ nav li {
   font-size: 23px;
   font-weight: 700;
   line-height: 28px;
-  padding: 18px 0;
+  padding: 18px 0px;
+  
 }
 .shubpy-card p {
   font-size: 18px;
@@ -551,7 +599,7 @@ nav li {
   line-height: 28px;
 }
 .shubpy-card li::marker {
-  font-size: 20px;
+  font-size: 30px;
   color: #50a0ff;
 }
 .technology {
@@ -559,6 +607,8 @@ nav li {
   color: #ffffff;
   font-size: 50px;
   line-height: 72px;
+  max-width: 1320px;
+  margin: 0 auto;
 }
 
 .tech-content {
@@ -566,8 +616,9 @@ nav li {
   align-items: center;
   justify-content: center;
   gap: 15px;
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 1320px;
+  left: 300px;
+
   flex-wrap: wrap;
 }
 
@@ -608,6 +659,7 @@ nav li {
   padding: 30px 0;
   border-radius: 24px;
   flex-wrap: wrap;
+   background: rgba(255, 255, 255, 0.05); /
 }
 
 .lang-img img {
@@ -625,6 +677,7 @@ nav li {
   color: #ffffff;
   margin: 0 auto;
   max-width: 1700px;
+ 
 }
 
 .review-head h1 {
@@ -635,17 +688,20 @@ nav li {
 }
 
 .review-grid {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   gap: 10px;
   margin-bottom: 95px;
+  padding: 0 20px; 
+ 
 }
 
 .review-box {
   border: 1px solid #ffffff21;
   padding: 40px;
   border-radius: 30px;
+ 
 }
 
 .review-box h1 {
@@ -691,6 +747,9 @@ nav li {
   border: 1px solid #ffffff0d;
   padding: 39px;
   border-radius: 30px;
+   background: rgba(255, 255, 255, 0.05); 
+   color: #ffffff;
+   max-width: 1300px;
 }
 
 .client-review p {
@@ -700,9 +759,9 @@ nav li {
   font-style: italic;
 }
 
-.client-review p i {
-  color: #4effff;
-  font-size: 20px;
+.client-review p img {
+  width: 30px;
+  height: 20px;
   opacity: 0.75;
 }
 
@@ -716,11 +775,10 @@ nav li {
 .Contact {
   display: flex;
   justify-content: center;
-  gap: 50px;
-  max-width: 1320px;
+  gap: 50px; 
   margin: 5rem auto;
   color: #ffff;
-  min-width: 100%;
+  max-width: 1270px;
   flex-wrap: wrap;
 }
 
@@ -728,7 +786,7 @@ nav li {
   font-size: 62px;
   font-weight: 400;
   line-height: 72px;
-  max-width: 400px;
+  max-width: 550px;
 }
 
 .contact-text p {
@@ -736,24 +794,27 @@ nav li {
   font-size: 18px;
   font-weight: 400;
   line-height: 28px;
+  max-width: 600px;
 }
 
 .contact-btn {
   display: flex;
   justify-content: center;
-  gap: 15px;
+  gap: 17px;
   flex-wrap: wrap;
+  margin-right: 80px;
 }
 
 .info-btn {
   display: flex;
   align-items: center;
   border: 1px solid #fff;
-  border-radius: 30px;
+  border-radius: 50px;
   padding: 20px 30px;
   background: transparent;
   color: white;
   cursor: pointer;
+  line-height: 100%;
 }
 
 .info-btn i {
@@ -769,6 +830,7 @@ nav li {
     flex-direction: column; */
   font-size: 14px;
   text-align: start;
+  line-height: 1.3;
 }
 
 .contact-form {
@@ -781,12 +843,16 @@ nav li {
 .input-gr {
   position: relative;
   margin-bottom: 20px;
+  
 }
-
+.input-group{
+  
+   border-radius: 30px;
+}
 .input-group i {
   position: absolute;
   top: 50%;
-  left: 3%;
+  left: 4%;
   transform: translateY(-50%);
 }
 
@@ -796,6 +862,7 @@ nav li {
   padding: 12px 15px 12px 45px;
   border-radius: 30px;
   background: transparent;
+ 
   border: 1px solid #ffffff;
   font-size: 16px;
 }
@@ -807,6 +874,7 @@ nav li {
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(94px);
   -webkit-backdrop-filter: blur(94px);
+  
 }
 
 /* .input-gr{
@@ -829,14 +897,21 @@ nav li {
   color: #ffffff;
 }
 
+.form-row {
+  display: flex;
+  gap: 24px;
+}
+
 /* FOOOTER SECTION*/
 .footer {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   color: #ffffff;
-  gap: 0rem;
+  gap: 80px;
   flex-wrap: wrap;
+  max-width: 1260px;
+  margin: 0 auto;
 }
 
 .footer-text {
@@ -862,16 +937,16 @@ nav li {
 
   max-width: 1240px;
 
-  margin: 0 auto;
+  margin: 20px auto;
   /* border: 1px solid #FFFFFF21;  */
 
   color: #ffffff;
   flex-wrap: wrap;
 }
 
-.footer-copyright {
+/* .footer-copyright {
   border: 1px solid #ffffff21;
-}
+} */
 
 .copyright-text p {
   font-size: 16px;
@@ -883,3 +958,40 @@ nav li {
 }
 
 /* ******************************************************************************************************************************** */
+.slick-prev, .slick-next {
+  z-index: 10;
+  display: block !important;
+   /* or transparent */
+  border-radius: 50%;
+}
+
+.slick-dots li button:before {
+  font-size: 14px;
+  color: #faf7f7;
+  padding: 20px 0;
+}
+
+.slick-dots li.slick-active button:before {
+  color:#ffffff /* yellow active dot */
+  
+}
+
+.review-grid.slick-initialized {
+  display: block !important;
+}
+
+.review-box {
+  margin: 0 10px; /* adds gap between cards */
+}
+
+
+
+
+
+/* .image-with-text {
+  display: none;
+}
+.image-with-text.show {
+  display: block;
+}
+ */
