--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ ul li a:hover {
   max-width: 100%;
   flex-wrap: wrap;
   margin-bottom: 86px;
-  
+  position: relative;
 }
 
 .hero-text {
@@ -185,6 +185,89 @@ ul li a:hover {
   padding: 0px 10px;
 }
 
+
+.glow-right {
+  position: absolute;
+  width: 415px;               
+  height: 415px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #4EFFFF 60%, transparent 70%);
+  filter: blur(120px);        /* soft edge; tweak 100px–150px as desired */
+  opacity: 0.3;               
+  z-index: 0;                 /* behind .hero-text and other content */
+}
+
+/* 4. Position left glow partly off-screen */
+.glow-left {
+  position: absolute;
+  top: 15%;                   
+  left: 0%;
+  width: 375px;
+  height: 415px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #4EFFFF 100%, transparent 70%);
+  filter: blur(120px);        /* soft edge; tweak 100px–150px as desired */
+  opacity: 0.3;               
+  z-index: 0;
+  transition: transform 0.3 ease-out;
+}
+
+/* 5. Position right glow partly off-screen */
+.glow-right {
+  top: 50%;              /* adjust vertical placement */
+  right: 0%;             
+}
+
+
+.glow-left-solution{
+   position: absolute;
+  top: 50%;                   
+  left: -20%;
+  width: 375px;
+  height: 415px;
+  border-radius: 50%;
+  background: radial-gradient(circle, #4EFFFF 100%, transparent 70%);
+  filter: blur(120px);        /* soft edge; tweak 100px–150px as desired */
+  opacity: 0.3;               
+  z-index: 0;
+  transition: transform 0.3 ease-out;
+  
+}
+
+.glow-right-content{
+  position: absolute;
+  top: 50%;                   
+  left: 60%;
+  width: 375px;
+  height: 415px;
+  border-radius: 50%;
+  background: radial-gradient(circle,#458de6 100%, transparent 70%);
+  filter: blur(120px);        /* soft edge; tweak 100px–150px as desired */
+  opacity: 0.3;               
+  z-index: 0;
+  transition: transform 0.3 ease-out;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .heading {
   margin-bottom: 56px;
 }
@@ -265,6 +348,7 @@ ul li a:hover {
   color: #ffffff;
   flex-wrap: wrap;
   max-width: 1270px;
+  position: relative;
 }
 
 .content h1 {
@@ -439,6 +523,7 @@ ul li a:hover {
   font-family: "Poppins", sans-serif;
   max-width: 1320px;
   margin: 0 auto;
+  position: relative;
   
 }
 
@@ -862,6 +947,7 @@ button:active{
 .input-group{
   
    border-radius: 30px;
+   
 }
 .input-group i {
   position: absolute;
@@ -879,7 +965,9 @@ button:active{
  
   border: 1px solid #ffffff;
   font-size: 16px;
+  
 }
+
 
 .input-group,
 .input-gr,
@@ -1000,6 +1088,12 @@ button:active{
 .review-box {
   margin: 0 10px; /* adds gap between cards */
 }
+
+
+
+
+
+
 
 
 
