--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,6 +14,7 @@
     display: flex;
     cursor: pointer;
   }
+
   .showData {
     display: flex;
     flex-direction: column;
@@ -23,7 +24,7 @@
     top: 90px;
     background-color: #0d243c;
 
-    width: 100%;
+    width: 100vw;
     height: 340px;
     text-align: center;
     padding: 0px;
